include/libimobiledevice/libimobiledevice.h

/** Error Codes */
typedef enum {
	IDEVICE_E_SUCCESS         =  0,
	IDEVICE_E_INVALID_ARG     = -1,
	IDEVICE_E_UNKNOWN_ERROR   = -2,
	IDEVICE_E_NO_DEVICE       = -3,
	IDEVICE_E_NOT_ENOUGH_DATA = -4,
	IDEVICE_E_CONNREFUSED     = -5,
	IDEVICE_E_SSL_ERROR       = -6,
	IDEVICE_E_TIMEOUT         = -7
} idevice_error_t;
typedef struct idevice_private idevice_private; /**< \private */
typedef idevice_private *idevice_t; /**< The device handle. */
/** Type of connection a device is available on */
enum idevice_connection_type {
	CONNECTION_USBMUXD = 1, /**< device is available via USBMUX */
	CONNECTION_NETWORK /**< device is available via network */
};
/* discovery (events/asynchronous) */
/** The event type for device add or removal */
enum idevice_event_type {
	IDEVICE_DEVICE_ADD = 1, /**< device was added */
	IDEVICE_DEVICE_REMOVE, /**< device was removed */
	IDEVICE_DEVICE_PAIRED /**< device completed pairing process */
};
/* event data structure */
/** Provides information about the occurred event. */
typedef struct {
	enum idevice_event_type event; /**< The event type. */
	const char *udid; /**< The device unique id. */
	enum idevice_connection_type conn_type; /**< The connection type. */
} idevice_event_t;
/* event callback function prototype */
/** Callback to notifiy if a device was added or removed. */
typedef void (*idevice_event_cb_t) (const idevice_event_t *event, void *user_data);
/* functions */

/**
 * Set the level of debugging.
 *
 * @param level Set to 0 for no debug output or 1 to enable debug output.
 */
LIBIMOBILEDEVICE_API void idevice_set_debug_level(int level);
/**
 * (DEPRECATED) Register a callback function that will be called when device add/remove
 * events occur.
 *
 * @deprecated Use idevice_events_subscribe() instead.
 *
 * @param callback Callback function to call.
 * @param user_data Application-specific data passed as parameter
 *   to the registered callback function.
 *
 * @return IDEVICE_E_SUCCESS on success or an error value when an error occurred.
 */
LIBIMOBILEDEVICE_API idevice_error_t idevice_event_subscribe(idevice_event_cb_t callback, void *user_data);
/**
 * (DEPRECATED) Release the event callback function that has been registered with
 *  idevice_event_subscribe().
 *
 * @deprecated Use idevice_events_unsubscribe() instead.
 *
 * @return IDEVICE_E_SUCCESS on success or an error value when an error occurred.
 */
LIBIMOBILEDEVICE_API idevice_error_t idevice_event_unsubscribe(void);
/* device structure creation and destruction */

/**
 * Creates an idevice_t structure for the device specified by UDID,
 *  if the device is available (USBMUX devices only).
 *
 * @note The resulting idevice_t structure has to be freed with
 * idevice_free() if it is no longer used.
 * If you need to connect to a device available via network, use
 * idevice_new_with_options() and include IDEVICE_LOOKUP_NETWORK in options.
 *
 * @see idevice_new_with_options
 *
 * @param device Upon calling this function, a pointer to a location of type
 *  idevice_t. On successful return, this location will be populated.
 * @param udid The UDID to match.
 *
 * @return IDEVICE_E_SUCCESS if ok, otherwise an error code.
 */
LIBIMOBILEDEVICE_API idevice_error_t idevice_new(idevice_t *device, const char *udid);
/**
 * Cleans up an idevice structure, then frees the structure itself.
 *
 * @param device idevice_t to free.
 */
LIBIMOBILEDEVICE_API idevice_error_t idevice_free(idevice_t device);
/* misc */

/**
 * Gets the handle or (USBMUX device id) of the device.
 *
 * @param device The device to get the USBMUX device id for.
 * @param handle Pointer to a uint32_t that will be set to the USBMUX handle value.
 *
 * @return IDEVICE_E_SUCCESS on success, otherwise an error code.
 */
LIBIMOBILEDEVICE_API idevice_error_t idevice_get_handle(idevice_t device, uint32_t *handle);