include/libiphone/notification_proxy.h

typedef int16_t np_error_t;
struct np_client_int;
typedef struct np_client_int *np_client_t;
typedef void (*np_notify_cb_t) (const char *notification);
/* Interface */
np_error_t np_client_new(iphone_device_t device, int dst_port, np_client_t *client);
np_error_t np_client_free(np_client_t client);
np_error_t np_post_notification(np_client_t client, const char *notification);
np_error_t np_observe_notification(np_client_t client, const char *notification);
np_error_t np_observe_notifications(np_client_t client, const char **notification_spec);
np_error_t np_set_notify_callback(np_client_t client, np_notify_cb_t notify_cb);